<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_marginTop="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/study"
            android:textColor="#373333"
            android:textSize="40dp"
            android:textStyle="bold"></TextView>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_rules"
            android:background="@drawable/button_border_blue"
            android:layout_marginTop="50dp"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:layout_height="89dp"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textSize="20dp"
            android:text="@string/rules"></androidx.appcompat.widget.AppCompatButton>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_videos"
            android:background="@drawable/button_border_blue"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:layout_height="89dp"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textSize="20dp"
            android:gravity="left|center_vertical"
             android:paddingLeft="40dp"
            android:text="@string/videos"></androidx.appcompat.widget.AppCompatButton>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>