<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Reset_Password"
    android:background="@drawable/background">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <TextView
                android:textColor="#373333"
                android:layout_marginBottom="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/program_name"
                android:textSize="50dp"
                android:textStyle="bold"
                ></TextView>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/registrate_border"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <TextView
                android:id="@+id/login"
                android:textSize="20dp"
                android:textStyle="bold"
                android:text="@string/set_email"
                android:gravity="center"
                android:textColor="@color/white"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:layout_width="match_parent"
                android:layout_height="match_parent"></TextView>
            <EditText
                android:id="@+id/reset_email"
                android:textSize="20dp"
                android:hint="@string/login"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginBottom="35dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:layout_width="match_parent"
                android:layout_height="match_parent"></EditText>

        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_sendpassword"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_registrat_border"
                android:text="@string/send_password"
                android:layout_gravity="center"
                android:textColor="#ffff"
                android:textSize="18dp"
                android:textStyle="bold"
                android:layout_width="350dp"
                android:height="55dp"
                android:layout_height="wrap_content"></androidx.appcompat.widget.AppCompatButton>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_back"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_registrat_border"
                android:text="@string/back"
                android:layout_gravity="center"
                android:textColor="#ffff"
                android:textSize="18dp"
                android:textStyle="bold"
                android:layout_width="350dp"
                android:height="55dp"
                android:layout_height="wrap_content"></androidx.appcompat.widget.AppCompatButton>


        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>