<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
 >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="9"
        android:background="@drawable/background_redact3">
        <FrameLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.2">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                android:text="@string/program_name"
                android:textColor="#373333"
                android:textSize="40dp"
                android:textStyle="bold"></TextView>
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2.3">

            <ImageView
                android:layout_width="228dp"
                android:layout_height="match_parent"
                android:layout_gravity="top|center"
                android:background="@drawable/img_study"></ImageView>
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3.9">
            <LinearLayout
                android:layout_marginTop="40dp"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/training"
                        android:textAllCaps="false"
                        android:text="@string/training"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:textSize="20dp"
                        android:background="@drawable/button_border_blue"
                        android:layout_gravity="center"
                        android:layout_width="171dp"
                        android:layout_height="70dp"
                        android:layout_marginBottom="20dp"></androidx.appcompat.widget.AppCompatButton>
                    <androidx.appcompat.widget.AppCompatButton
                        android:textAllCaps="false"
                        android:text="@string/error"
                        android:id="@+id/btn_errors"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:textSize="20dp"
                        android:background="@drawable/button_barder_lightblue"
                        android:layout_gravity="center"
                        android:layout_width="171dp"
                        android:layout_height="70dp"
                        ></androidx.appcompat.widget.AppCompatButton>
                </LinearLayout>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_exam"
                        android:textAllCaps="false"
                        android:text="@string/exam"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:textSize="20dp"
                        android:background="@drawable/button_border_orange"
                        android:layout_gravity="center"
                        android:layout_width="171dp"
                        android:layout_height="70dp"
                        android:layout_marginBottom="20dp"></androidx.appcompat.widget.AppCompatButton>
                    <androidx.appcompat.widget.AppCompatButton
                        android:textAllCaps="false"
                        android:text="@string/marafon"
                        android:id="@+id/btn_marathon"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:textSize="20dp"
                        android:background="@drawable/button_barder_lightblue"
                        android:layout_gravity="center"
                        android:layout_width="171dp"
                        android:layout_height="70dp"></androidx.appcompat.widget.AppCompatButton>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>