<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="8"
        >
        <FrameLayout
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="#313066">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile"
                android:textSize="40dp"
                android:textColor="#ffff"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal|bottom"
                ></TextView>
            <ImageView
                android:id="@+id/btn_save"
                android:layout_gravity="right|bottom"
                android:layout_marginRight="20dp"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/save1"></ImageView>

        </FrameLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_weight="2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/layout_border"
            android:gravity="center">
            <ImageView
                android:id="@+id/prof_img"
                android:layout_width="180dp"
                android:layout_height="160dp"
                android:layout_gravity="bottom"
                android:background="@drawable/profile_img"
                ></ImageView>
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_statistic"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:text="@string/statistic"
                android:textAllCaps="false"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="#ffff"
                android:background="@drawable/button_border_blue"></androidx.appcompat.widget.AppCompatButton>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/name"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="40dp"
                android:textColor="#373333"
                android:textSize="20dp"
                android:textStyle="bold"></TextView>
            <EditText
                android:id="@+id/name_profile"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:textSize="20dp"
                android:textColorHint="@color/black"
                android:hint="@string/name"
                android:textColor="@color/black"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:backgroundTint="@color/black"></EditText>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/login"
                android:layout_marginLeft="10dp"
                android:textColor="#373333"
                android:textSize="20dp"
                android:textStyle="bold"></TextView>
            <EditText
                android:id="@+id/email_profile"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:textSize="20dp"
                android:textColorHint="@color/black"
                android:hint="@string/login"
                android:textColor="@color/black"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:backgroundTint="@color/black"></EditText>

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/password"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="14dp"
                android:textColor="#373333"
                android:textSize="20dp"
                android:textStyle="bold"></TextView>
            <EditText
                android:id="@+id/password_profile"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:textSize="20dp"
                android:textColorHint="@color/black"
                android:hint="@string/password"
                android:textColor="@color/black"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:backgroundTint="@color/black"></EditText>
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/sign_out"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:text="@string/sign_out"
                android:textAllCaps="false"
                android:textSize="25dp"
                android:textStyle="bold"
                android:textColor="#EA0C0C"
                android:layout_marginBottom="10dp"
                android:background="#0000"
                ></androidx.appcompat.widget.AppCompatButton>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>