<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Training"
    android:background="@drawable/main_background">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="10">
        <FrameLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/back_main"
                android:layout_marginLeft="10dp"
                android:layout_gravity="bottom|left"
                android:background="@drawable/back"
                android:layout_marginBottom="5dp"
                android:layout_width="51dp"
                android:layout_height="38dp"></ImageView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                android:text="@string/training"
                android:textColor="#373333"
                android:textSize="40dp"
                android:textStyle="bold"></TextView>

        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <androidx.appcompat.widget.AppCompatButton
                android:visibility="visible"
                android:id="@+id/btn_settings"
                android:layout_gravity="center"
                android:layout_width="300dp"
                android:textColor="#313066"
                android:background="@drawable/button_border_settings"
                android:layout_height="55dp"
                android:text="@string/setting"></androidx.appcompat.widget.AppCompatButton>
        </FrameLayout>
        <FrameLayout
            android:background="@drawable/main_fragment_border"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8">
            <TextView
                android:text="@string/list_bulets"
                android:textColor="#313066"
                android:textSize="22dp"
                android:textStyle="bold"
                android:layout_gravity="center|top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"></TextView>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list_bulets"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="70dp"></androidx.recyclerview.widget.RecyclerView>
        </FrameLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>